--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eco-Enzim Indonesia</title>
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -22,6 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto text-uppercase fw-semibold small">
                     <li class="nav-item"><a class="nav-link" href="#beranda">Beranda</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#eco-enzim">Eco Enzim</a></li>
                     <li class="nav-item"><a class="nav-link" href="#tema">Tema</a></li>
                     <li class="nav-item"><a class="nav-link" href="#cara">Cara Buat</a></li>
                     <li class="nav-item"><a class="nav-link" href="#manfaat">Manfaat</a></li>
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link" href="#tim">Tim Kami</a></li>
                 </ul>
             </div>
-        </div>
+        </div>      
     </nav>
 
     <header id="beranda" class="hero-section d-flex align-items-center text-white text-center">
@@ -38,6 +38,88 @@
             <p class="lead mb-4">Solusi sederhana mengolah limbah organik menjadi cairan serbaguna.</p>
         </div>
     </header>
+
+    <section id="eco-enzim" class="bg-light">
+        <div class="container">
+            <div class="row align-items-center g-4">
+                <div class="col-lg-6">
+                    <div class="card border-0 shadow-sm h-100">
+                        <div class="card-body p-4">
+                            <div class="d-inline-block border border-success rounded-pill px-3 py-1 mb-3">
+                                <span class="text-success fw-bold text-uppercase pill-label">Apa Itu Eco-Enzim?</span>
+                            </div>
+                            <h2 class="fw-bold mb-3 text-dark">Cairan serbaguna dari sisa dapur</h2>
+                            <p class="text-muted mb-3">Eco-enzim adalah hasil fermentasi sederhana dari gula, sampah organik dapur, dan air yang menghasilkan cairan multi-fungsi untuk rumah tangga serta perbaikan lingkungan.</p>
+                            <p class="text-muted mb-4">Prosesnya ramah lingkungan karena memanfaatkan limbah organik yang biasanya dibuang, sekaligus menekan emisi gas metana dari TPA. Dalam 3 bulan, larutan berubah menjadi enzim alami yang kaya mikroorganisme bermanfaat.</p>
+                            <div class="vstack gap-3">
+                                <div class="d-flex">
+                                    <i class="fas fa-recycle text-success fs-5 mt-1 flex-shrink-0"></i>
+                                    <div class="ms-3">
+                                        <h6 class="fw-bold mb-1 text-dark">Mengolah limbah organik</h6>
+                                        <p class="small text-muted mb-0">Mengubah kulit buah/sayur menjadi produk bernilai guna.</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <i class="fas fa-water text-success fs-5 mt-1 flex-shrink-0"></i>
+                                    <div class="ms-3">
+                                        <h6 class="fw-bold mb-1 text-dark">Menyehatkan air & tanah</h6>
+                                        <p class="small text-muted mb-0">Mikroba baik membantu mengurai polutan dan menutrisi tanah.</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <i class="fas fa-hand-holding-heart text-success fs-5 mt-1 flex-shrink-0"></i>
+                                    <div class="ms-3">
+                                        <h6 class="fw-bold mb-1 text-dark">Hemat & mudah dibuat</h6>
+                                        <p class="small text-muted mb-0">Bahan mudah didapat, hanya perlu wadah tertutup dan waktu fermentasi.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row g-3">
+                        <div class="col-sm-6">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="icon-box bg-success text-white rounded-circle mb-3">1</div>
+                                    <h6 class="fw-bold text-dark">Bahan Utama</h6>
+                                    <p class="small text-muted mb-0">Gula merah/molase, sisa organik (kulit buah/sayur), air bersih.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="icon-box bg-warning text-dark rounded-circle mb-3"><i class="fas fa-hourglass-half"></i></div>
+                                    <h6 class="fw-bold text-dark">Waktu Fermentasi</h6>
+                                    <p class="small text-muted mb-0">Minimal 3 bulan di tempat teduh, buka tutup secara berkala untuk melepas gas.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="icon-box bg-success text-white rounded-circle mb-3"><i class="fas fa-spray-can"></i></div>
+                                    <h6 class="fw-bold text-dark">Cara Pakai</h6>
+                                    <p class="small text-muted mb-0">Campur 1:20 dengan air untuk pembersih, 1:100 untuk penyegar udara.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-body">
+                                    <div class="icon-box bg-success text-white rounded-circle mb-3"><i class="fas fa-seedling"></i></div>
+                                    <h6 class="fw-bold text-dark">Manfaat Utama</h6>
+                                    <p class="small text-muted mb-0">Pupuk cair, pembersih lantai, deodorizer, pengusir hama lembut.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="tema" class="bg-white">
         <div class="container">
@@ -49,7 +131,7 @@
                 </div>
                 <div class="col-lg-6 ps-lg-5">
                     <div class="d-inline-block border border-success rounded-pill px-3 py-1 mb-3">
-                        <span class="text-success fw-bold text-uppercase" style="font-size: 0.85rem; letter-spacing: 1px;">
+                        <span class="text-success fw-bold text-uppercase pill-label">
                             TEMA PROJECT
                         </span>
                     </div>
@@ -179,7 +261,12 @@
                 <div class="col-lg-8">
                     <div class="card shadow-lg border-0 overflow-hidden">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" allowfullscreen></iframe>
+                            <iframe 
+                                src="https://www.youtube.com/embed/3zAoGn2T4WY"
+                                title="YouTube video player"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                referrerpolicy="strict-origin-when-cross-origin"
+                                allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -191,46 +278,46 @@
         <div class="container">
             <div class="text-center mb-5">
                 <h2 class="fw-bold">Tim Kami</h2>
-                <p class="text-muted">7 Orang hebat di balik project ini.</p>
+                <p class="text-muted">7 Orang hebat (kata-nya) di balik project ini.</p>
             </div>
             
             <div class="row justify-content-center g-4 mb-4">
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Ahmad&background=2E7D32&color=fff&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-success" alt="Tim 1">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
+-                    <img src="foto/7.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-success" alt="Tim 1">
+                    <h5 class="fw-bold mb-0">RENDY SETIAWAN</h5>
+                    <small class="text-muted">20234350163</small>
+                </div>
+                <div class="col-6 col-md-3 text-center team-item">
+                    <img src="foto/2.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 2">
+                    <h5 class="fw-bold mb-0">RANI</h5>
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Budi&background=FFC107&color=333&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 2">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
+                    <img src="foto/5.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 3">
+                    <h5 class="fw-bold mb-0">ADIT</h5>
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Citra&background=2E7D32&color=fff&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 3">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
-                    <small class="text-muted">NPM</small>
-                </div>
-                <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Dewi&background=FFC107&color=333&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 4">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
-                    <small class="text-muted">NPM</small>
+                    <img src="foto/3.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 4">
+                    <h5 class="fw-bold mb-0">CHAN PETRIK</h5>
+                    <small class="text-muted">20234351759</small>
                 </div>
             </div>
 
             <div class="row justify-content-center g-4">
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Eko&background=2E7D32&color=fff&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 5">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
+                    <img src="foto/4.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 5">
+                    <h5 class="fw-bold mb-0">PETRIK</h5>
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Fajar&background=FFC107&color=333&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 6">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
-                    <small class="text-muted">NPM</small>
+                    <img src="foto/1.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 6">
+                    <h5 class="fw-bold mb-0">RAFLI</h5>
+                    <small class="text-muted">202343501723</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="https://ui-avatars.com/api/?name=Gita&background=2E7D32&color=fff&size=200&rounded=true" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 7">
-                    <h5 class="fw-bold mb-0">UJANG</h5>
+                    <img src="foto/6.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 7">
+                    <h5 class="fw-bold mb-0">GHANI</h5>
                     <small class="text-muted">NPM</small>
                 </div>
             </div>
