--- a/index.html
+++ b/index.html
@@ -283,22 +283,22 @@
             
             <div class="row justify-content-center g-4 mb-4">
                 <div class="col-6 col-md-3 text-center team-item">
--                    <img src="foto/7.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-success" alt="Tim 1">
+-                    <img src="Foto/7.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-success" alt="Tim 1">
                     <h5 class="fw-bold mb-0">RENDY SETIAWAN</h5>
                     <small class="text-muted">20234350163</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="foto/2.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 2">
+                    <img src="Foto/2.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 2">
                     <h5 class="fw-bold mb-0">RANI</h5>
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="foto/5.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 3">
+                    <img src="Foto/5.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 3">
                     <h5 class="fw-bold mb-0">ADIT</h5>
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="foto/3.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 4">
+                    <img src="Foto/3.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 4">
                     <h5 class="fw-bold mb-0">CHAN PETRIK</h5>
                     <small class="text-muted">20234351759</small>
                 </div>
@@ -306,17 +306,17 @@
 
             <div class="row justify-content-center g-4">
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="foto/4.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 5">
+                    <img src="Foto/4.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 5">
                     <h5 class="fw-bold mb-0">PETRIK</h5>
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="foto/1.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 6">
+                    <img src="Foto/1.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 6">
                     <h5 class="fw-bold mb-0">RAFLI</h5>
                     <small class="text-muted">202343501723</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="foto/6.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 7">
+                    <img src="Foto/6.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 7">
                     <h5 class="fw-bold mb-0">GHANI</h5>
                     <small class="text-muted">NPM</small>
                 </div>
