--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     <small class="text-muted">NPM</small>
                 </div>
                 <div class="col-6 col-md-3 text-center team-item">
-                    <img src="Foto/1.jpg" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 6">
+                    <img src="Foto/1.JPG" class="img-fluid rounded-4 shadow mb-3 border border-4 border-white" alt="Tim 6">
                     <h5 class="fw-bold mb-0">RAFLI</h5>
                     <small class="text-muted">202343501723</small>
                 </div>
